--- a/app/src/main/res/layout/fragment_bepc.xml
+++ b/app/src/main/res/layout/fragment_bepc.xml
@@ -35,7 +35,7 @@
                 android:textSize="50sp"
                 android:gravity="center"
                 android:padding="10dp"/>
-            <com.a33y.jo.madgasyexams.CustomGridView
+            <com.a33y.jo.madgasyexams.views.CustomGridView
                 android:id="@+id/recycler"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -43,7 +43,7 @@
                 android:listSelector="@android:color/transparent"
                 >
 
-            </com.a33y.jo.madgasyexams.CustomGridView>
+            </com.a33y.jo.madgasyexams.views.CustomGridView>
 
 
         </LinearLayout>
